--- a/backend/resources/question-publico.html
+++ b/backend/resources/question-publico.html
@@ -145,13 +145,13 @@
                         </div>
                         <div class="grid md:grid-cols-2 gap-4">
                             <div>
-                                <label class="block text-sm font-medium text-foreground mb-1">Situación laboral</label>
+                                <label class="block text-sm font-medium text-foreground mb-1">Empresa en la que Labora</label>
                                 <select name="situacion_laboral" class="w-full px-3 py-2 bg-background border border-input rounded-md text-sm">
                                     <option value="">Selecciona</option>
-                                    <option value="publico">Sector público</option>
-                                    <option value="privado">Sector privado</option>
-                                    <option value="independiente">Independiente</option>
-                                    <option value="pensionado">Pensionado</option>
+                                    <option value="Empresa 1">Empresa 1</option>
+                                    <option value="Empresa 2">Empresa 2</option>
+                                    <option value="Empresa 3">Empresa 3</option>
+                                    <option value="Empresa 4">Empresa 4</option>
                                 </select>
                             </div>
                             <div>
