agregar sección de protección de datos en el formulario de registro y actualizar opciones en el cuestionario público

--- a/backend/resources/lead-form.html
+++ b/backend/resources/lead-form.html
@@ -224,7 +224,18 @@
                     </div>
                 </div>
 
-                <div class="pt-6">
+                <div class="pt-4 pb-2">
+                    <div class="flex items-start gap-2 p-3 bg-accent/50 rounded-lg border border-border/50">
+                        <svg class="w-4 h-4 text-primary flex-shrink-0 mt-0.5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 15v2m-6 4h12a2 2 0 002-2v-6a2 2 0 00-2-2H6a2 2 0 00-2 2v6a2 2 0 002 2zm10-10V7a4 4 0 00-8 0v4h8z"></path>
+                        </svg>
+                        <p class="text-xs text-muted-foreground leading-relaxed">
+                            <strong class="text-foreground">Protección de datos:</strong> Todos los datos recolectados están protegidos y serán utilizados exclusivamente para procesar su solicitud. Cumplimos con la normativa de protección de datos personales.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="pt-2">
                      <button type="submit" id="submitBtn" class="w-full inline-flex items-center justify-center rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-4 py-2">
                         Registrar Lead
                     </button>
