--- a/backend/resources/question-pensionados.html
+++ b/backend/resources/question-pensionados.html
@@ -96,24 +96,12 @@
                             <p class="text-sm font-medium text-foreground">Tipo de pensión *</n>
                             <div class="space-y-2 border rounded-md p-3 bg-background">
                                 <label class="flex items-center gap-2 text-sm text-foreground">
-                                    <input type="radio" name="tipo_pension" value="ivm_ccss" class="h-4 w-4 text-primary border-input rounded">
-                                    <span>IVM / CCSS</span>
+                                    <input type="radio" name="tipo_pension" value="hacienda" class="h-4 w-4 text-primary border-input rounded">
+                                    <span>Hacienda</span>
                                 </label>
                                 <label class="flex items-center gap-2 text-sm text-foreground">
-                                    <input type="radio" name="tipo_pension" value="jupe_ma" class="h-4 w-4 text-primary border-input rounded">
-                                    <span>Magisterio / JUPEMA</span>
-                                </label>
-                                <label class="flex items-center gap-2 text-sm text-foreground">
-                                    <input type="radio" name="tipo_pension" value="hacienda_mep" class="h-4 w-4 text-primary border-input rounded">
-                                    <span>Hacienda / MEP</span>
-                                </label>
-                                <label class="flex items-center gap-2 text-sm text-foreground">
-                                    <input type="radio" name="tipo_pension" value="rop" class="h-4 w-4 text-primary border-input rounded">
-                                    <span>ROP / Operadora</span>
-                                </label>
-                                <label class="flex items-center gap-2 text-sm text-foreground">
-                                    <input type="radio" name="tipo_pension" value="otra" class="h-4 w-4 text-primary border-input rounded">
-                                    <span>Otra</span>
+                                    <input type="radio" name="tipo_pension" value="poder_judicial" class="h-4 w-4 text-primary border-input rounded">
+                                    <span>Poder Judicial</span>
                                 </label>
                             </div>
                         </div>
@@ -121,16 +109,8 @@
                             <label class="block text-sm font-medium text-foreground mb-1">Entidad que paga la pensión *</label>
                             <select name="entidad" class="w-full px-3 py-2 bg-background border border-input rounded-md text-sm">
                                 <option value="">Selecciona</option>
-                                <option value="ccss">CCSS / IVM</option>
-                                <option value="jupe_ma">JUPEMA</option>
-                                <option value="hacienda">Hacienda</option>
-                                <option value="mep">MEP</option>
-                                <option value="rop_bn_vital">BN Vital</option>
-                                <option value="rop_bcr">BCR Pensión</option>
-                                <option value="rop_popular">Popular Pensiones</option>
-                                <option value="rop_bac">BAC Pensiones</option>
-                                <option value="rop_oc">Occidente Pensiones</option>
-                                <option value="otra">Otra</option>
+                                <option value="hacienda">Ministerio de Hacienda</option>
+                                <option value="poder_judicial">Poder Judicial</option>
                             </select>
                             <label class="block text-sm font-medium text-foreground mb-1 mt-3">Antigüedad recibiendo pensión *</label>
                             <select name="antiguedad" class="w-full px-3 py-2 bg-background border border-input rounded-md text-sm">
@@ -149,11 +129,10 @@
                         <div>
                             <label class="block text-sm font-medium text-foreground mb-1">Monto requerido *</label>
                             <select name="monto" class="w-full px-3 py-2 bg-background border border-input rounded-md text-sm">
-                                <option value="">Selecciona</option>
-                                <option value="0-3m">Menos de 3M CRC</option>
-                                <option value="3-8m">3M - 8M CRC</option>
-                                <option value="8-15m">8M - 15M CRC</option>
-                                <option value="15m+">Más de 15M CRC</option>
+                                <option value="">Selecciona un rango</option>
+                                <option value="100k-300k">100 mil - 300 mil</option>
+                                <option value="300k-500k">300 mil - 500 mil</option>
+                                <option value="500k-690k">500 mil - 690 mil</option>
                             </select>
                         </div>
                         <div>
@@ -184,7 +163,6 @@
                                 <option value="">Selecciona</option>
                                 <option value="consumo">Consumo / personales</option>
                                 <option value="consolidacion">Consolidación de deudas</option>
-                                <option value="vivienda">Vivienda / reparaciones</option>
                                 <option value="salud">Salud</option>
                                 <option value="otro">Otro</option>
                             </select>
